[package]
name = "procapi"
authors = ['Timar07', 'Yaroslav957']
repository = "https://github.com/yaroslav957/procapi"
readme = "README.md"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["default"] }

[target.'cfg(linux)'.dependencies]
