[package]
name = "procapi-sys"
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(unix)'.dependencies]
libproc = "0.14.8"
