[package]
name = "procapi-sys"
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.16.0"

[target.'cfg(unix)'.dependencies]
libproc = "0.14.8"
