[package]
name = "procapi"
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procapi-sys = { path = "../procapi-sys" }
