[package]
name = "procapi_core"
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", features = ["default"] }

[target.'cfg(target_os="linux")'.dependencies]

[target.'cfg(target_os="macos")'.dependencies]
libproc = { version = "0.14.8", features = ["default"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.58.0", features = ["default"] }